--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   background: #555;
 }
 .container {
-  width: 90%;
+  width: 100%;
   max-width: 400px;
   padding: 25px 35px;
   position: fixed;
@@ -105,6 +105,10 @@ body {
 }
 
 @media screen and (max-width: 400px) {
+  .container {
+    max-width: 350px;
+  }
+  
   #popper {
     right: 20px;
   }
